--- a/nginx.conf
+++ b/nginx.conf
@@ -45,7 +45,13 @@ http {
     }
 
     server {
-        listen 80;
+        listen 443 ssl;
+		
+        ssl_certificate     /etc/nginx/certs/tls.crt;
+        ssl_certificate_key /etc/nginx/certs/tls.key;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+		
 	# The below allows for being behind a reverse proxy and allowing the Nextcloud app to connect
         server_tokens off;
 
