--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,13 @@ http {
     }
 
     server {
+        listen 80;
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
         listen 443 ssl;
 		
         ssl_certificate     /etc/nginx/certs/tls.crt;
